# malaria-detection

./: README.md  Reference_Notebook_Malaria_Detection_Full_Code.ipynb  notebook_malaria_detection.ipynb  pyproject.toml
malaria-detection/: get_dataset.ipynb  notebook_malaria_detection.ipynb  training.ipynb
malaria-detection/utils/: __init__.py  checkpoint.py  get_dataset.py  plot_images.py  plots.py  prediction.py  preprocessing.py
