[tool.poetry]
name = "malaria-detection"
version = "0.1.0"
description = ""
authors = ["victorien <victorienmichel3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^70.1.0"
python-dotenv = "^1.0.1"
kaggle = "^1.6.14"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
